# grimoire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  hygiene.yml  release.yml  sbom.yml  security.yml
config/: default.yaml
docs/: benchmarks.synthetic.json  benchmarks.synthetic.md  public-scope.md  redaction-policy.md  threat-model.md
examples/: ingest_cves.py  sanitized_workflow.md  search_demo.py
examples/sample_data/: owasp_top10.json
grimoire/: __init__.py  core.py  embeddings.py  quality.py  search.py
grimoire/ingest/: __init__.py  base.py  csv.py  cve.py  markdown.py
grimoire/mcp/: __init__.py  server.py
scripts/: benchmark_synthetic.py  fetch_sources.py  health_check.py  redact.py  setup.sh
tests/: test_ingest.py  test_quality.py  test_search.py
